meta infomation updated

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -7,8 +7,9 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="InterviewConnect, Your one-stop destination for acing your next software developer interview! "
     />
+    <meta name="keywords" content="InterviewConnect ,interview, Web development interview questions, HTML interview questions, CSS interview questions, JavaScript interview questions, Data structures and algorithms interview questions, Stack interview questions, Queue interview questions, Linked list interview questions, Operating system interview questions, Computer network interview questions, Database interview questions, Web development interview tips, DSA interview preparation, Core subject interview questions, Interview preparation resources, Technical interview questions, Programming interview questions, Software engineering interview questions, InterviewConnect website, Job interview tips and tricks HTML, CSS, JavaScript">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
